# mahjong-analysis-api

./: .coderabbit.yaml  .gcloudignore  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
api/: auth.py
api/cruds/: dataset.py  game.py  kyoku.py  statstics.py
api/routers/: dataset.py  game.py  kyoku.py  statistics.py
api/schemas/: dataset.py  game.py  generic.py  kyoku.py  statistics.py
